--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: #460063;
+    background-color: #efcffd;
     font-family:"Raleway";
 }
 
@@ -13,6 +13,7 @@ body {
     place-content: center;
 
     .nothing{
-        color: white;
+        color: rgb(19, 14, 14);
+        text-align: center;
     }
 }
