--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: #460063;
+  background-color: #efcffd;
   font-family: "Raleway";
 }
 
@@ -16,6 +16,7 @@ body {
 }
 
 body .nothing {
-  color: white;
+  color: #130e0e;
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
