update on colors

--- a/css/main.scss
+++ b/css/main.scss
@@ -2,8 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: #efcffd;
-    font-family: 'Montserrat Alternates', sans-serif;
+    background-color: #0d0a0e;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -12,7 +12,7 @@ body {
     place-content: center;
 
     .nothing{
-        color: rgb(19, 14, 14);
+        color: rgb(241, 241, 241);
         text-align: center;
     }
 }
