--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: #efcffd;
-  font-family: 'Montserrat Alternates', sans-serif;
+  background-color: #0d0a0e;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -15,7 +15,7 @@ body {
 }
 
 body .nothing {
-  color: #130e0e;
+  color: #f1f1f1;
   text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
